# ChangeLog for app-arch/xz-utils
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/xz-utils/ChangeLog,v 1.65 2013/10/19 02:28:16 vapier Exp $

  19 Oct 2013; Mike Frysinger <vapier@gentoo.org> xz-utils-5.0.5-r1.ebuild,
  xz-utils-9999.ebuild:
  Update LICENSE as pointed out by Marc MERLIN.

  07 Aug 2013; Michał Górny <mgorny@gentoo.org> xz-utils-5.0.5-r1.ebuild,
  xz-utils-9999.ebuild:
  Remove the unnecessary emul-linux blocker. My bad.

*xz-utils-5.0.5-r1 (07 Aug 2013)

  07 Aug 2013; Michał Górny <mgorny@gentoo.org> +xz-utils-5.0.5-r1.ebuild,
  xz-utils-9999.ebuild:
  Support multilib. Bug #474940, patch by Alexis Ballier.

*xz-utils-5.0.5 (30 Jun 2013)

  30 Jun 2013; Mike Frysinger <vapier@gentoo.org> +xz-utils-5.0.5.ebuild:
  Version bump.

  17 Feb 2013; Zac Medico <zmedico@gentoo.org> xz-utils-5.0.4-r1.ebuild:
  Add ~arm-linux keyword.

  30 Dec 2012; Raúl Porcel <armin76@gentoo.org> xz-utils-5.0.4-r1.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #448792

  28 Dec 2012; Jeroen Roovers <jer@gentoo.org> xz-utils-5.0.4-r1.ebuild:
  Stable for HPPA (bug #448792).

  28 Dec 2012; Agostino Sarubbo <ago@gentoo.org> xz-utils-5.0.4-r1.ebuild:
  Stable for ppc, wrt bug #448792

  28 Dec 2012; Agostino Sarubbo <ago@gentoo.org> xz-utils-5.0.4-r1.ebuild:
  Stable for ppc64, wrt bug #448792

  28 Dec 2012; Agostino Sarubbo <ago@gentoo.org> xz-utils-5.0.4-r1.ebuild:
  Stable for x86, wrt bug #448792

  28 Dec 2012; Agostino Sarubbo <ago@gentoo.org> xz-utils-5.0.4-r1.ebuild:
  Stable for amd64, wrt bug #448792

  07 Dec 2012; Mike Frysinger <vapier@gentoo.org> xz-utils-5.0.4-r1.ebuild,
  xz-utils-9999.ebuild:
  Clean up elibtoolize logic and re-sync 9999/non-9999 ebuilds.

*xz-utils-5.0.4-r1 (24 Nov 2012)

  24 Nov 2012; Samuli Suominen <ssuominen@gentoo.org>
  +xz-utils-5.0.4-r1.ebuild, xz-utils-9999.ebuild:
  Use gen_usr_ldscript -a lzma to move liblzma.so.$version from /usr to /