@@ -8,6 +8,7 @@ DIST xz-5.0.2.tar.gz 1241178 SHA256 57e979baaa40147dde1bbb284e3618f8f18b6532c932
 DIST xz-5.0.3.tar.gz 1257140 SHA256 10eb4df72dffb2fb14c3d2d82b450e72282ffcb9ee3908a8e5b392b8f09681bf SHA512 ee5902e82bf74c0bd75e43bb380ec536513ba52c35c3ce9d6cf8b1bcf0c5a6a5b04ca9351c66662baf6abfb16a889557490d48288597f3cdf041649286abd3e9 WHIRLPOOL ddd95eea399ca906027734c5e7f077c9d1fb04ad80c00b87b8e50fe7536044423ce96579c02778431813f654410a08ef897ea4294c77599c6471f2110085ea3c
 DIST xz-5.0.4.tar.gz 1281166 SHA256 d67405798dad645965fe51cf4e40c23d1201fb234378d3c44f5a3787142b83b6 SHA512 78620fd6515cd90242a3f3205a8f77d295a8e5ebd2b5969a34ae0aa42c11abef1982f21d0add7fbe830b3ce88082ea1c1718a70241b1446149c89ac0828e1e63 WHIRLPOOL 87002f7871af63f1ae87b1b779310ca54f4c82e3b855e448eb96274523c18ce92be9b9b4de7388868f61d9b19201682e783e2ca65651797cc439021583aa6c19
 DIST xz-5.0.5.tar.gz 1305685 SHA256 5dcffe6a3726d23d1711a65288de2e215b4960da5092248ce63c99d50093b93a SHA512 dc36f305bc2abf97da8c86e44b661d9ac2d5ed58e89e83f007f49e0d7cf4871d7b6defa51b9348d3f725793517f7ac47de572f6d23212e074c32032dd8357772 WHIRLPOOL 7e95d6d064239ebe6f1231ec8a5a1390e3c5d71863d7e8d1339bed5f20255d750e3f9df953ed7e95ae2b43607aab93747a5a2d948e4bb6745d3adcf7ea25c455
+DIST xz-5.1.3alpha.tar.gz 1262328 SHA256 9f94506e301d5b6863921bba861a99ba00de384dafb4e5f409679a93e41613d4 SHA512 839c999e1eee273a3120e76d5096f8a523c157a2dacd83f6d554e3f2a4f790f3f7360cfbc7749c1c42cb213d0a55eb74216ed2236a6568f49027e119a3184687 WHIRLPOOL 3c1227c899dcab955b2db10ed94432fff6a5025d0da957dfab14b8129d25cc8478b372bcae6b9b089769b732d19d570ad42c187fa568e257ad5fd5bf15eb8743
 EBUILD xz-utils-4.999.9_beta.ebuild 1464 SHA256 a0f2d0c5734466bc350856cb7e9e948b4232ae63d5b42ad150d2d522bdf8fbea SHA512 6237068a37249e9678d79c55cc9a149733e1ba0fb52ecf426cd734e660a573690e2d44e52eb0f2aa7f38c1f80cb0d67258b1484431ff67b92e50b048b25f2acd WHIRLPOOL 52b1cc8abb4258efd2dc2512668c9ebf12d0b5c236c056a5344fcc7cf319bf8daa506df7ecb20e2d99f28274708fe84745ec9e1b3aa4eb6f88b6594571f3ccb8
 EBUILD xz-utils-5.0.1-r1.ebuild 1681 SHA256 d3f03e032d639b4317f9370ec549b59aa7695cc35f13ca44a170f1cda3036181 SHA512 6b53f91b17ff44445ac582c4b8de91c24a4b55cda77c56e7d1f21b20893d1dfee9f92b3958bd507f076115fa27077818d2c061a72caaf071be25dbf75ea70f13 WHIRLPOOL 64e9b6bc46a79609c1badfb2011b1927a6c35ecbea262aa5946aadf8c5f14b3467445357bd8cf1944500f6cffb7f577f670bb837d591e4832eb2cbb20f6026f9
 EBUILD xz-utils-5.0.1.ebuild 1595 SHA256 ec77f5df32f6c6f1069544bdfada81a7a32e4418fe6bb013dcb246e08e22a0d2 SHA512 1a09f974b30fc4560b1df79e6884b0dda430c536eb9f3566e4c404ab395ae9a56c71e9158c35a631c8f94d5c673938f72d3353f1497c959e75a6441000a8a7fb WHIRLPOOL fb05a918eda587654de241002de465cd46d0618d54705e0074acecf3b6c4a7f5307ec2a8ddba579839b8b635c5fa0a7580c1968f63fb24866f67df598c4feb72
@@ -17,23 +18,24 @@ EBUILD xz-utils-5.0.4-r1.ebuild 1906 SHA256 284ac5f7f7ab037eb535121e1910a077263e
 EBUILD xz-utils-5.0.4.ebuild 1916 SHA256 2441fbe41aa27861136717702b49b419560e6f2290d326c51827dc1c75fbecb8 SHA512 d91c9930d2190d631de6ff3ccf8d177d9432bfce40ac6e09498070e50f48c026630ed0909646dd2c38e3a8be18f67e7b3f354b4f6f66f2e1dea85de16d739fc9 WHIRLPOOL 526580bc196c132b24585b18aeac5630099bcaa6857495a6eeba5247cd080ef6d0c190d9ed4608c76ca939aedc24938e57f5020928bfe25430c1dc8b83be5b96
 EBUILD xz-utils-5.0.5-r1.ebuild 2230 SHA256 222f603f15ecada6399d08660ef8d02b55aa96afc2bf82e218c94be7c9ab6b7f SHA512 811407cbb6f7e7f28ec4010b749c097a6fb65d2c87f0f8da5fc9002ce112b1db06276614cad6b5b9435e09ae20f3e8990106a63c3f4d03c4de8fd0cf71ecf337 WHIRLPOOL eca391501604fbf18220398d50322fc6c62db69a644a4626542313bb0cd39c2862f1cb5e7e9d6a609b0b7e5996f561542f8d239d78ff2e388be69d05751ec813
 EBUILD xz-utils-5.0.5.ebuild 1914 SHA256 3bc11fcc7a87e58a67b92c42fad6c6baa5fc5a334ff84a8f64c0bb0334e56623 SHA512 f4dd0121777dd50862884c0d0ed10cb7b63952c7bcf57d9a5786b2bf07026b1722e0832ed3403b5ff16d2b70eebabd3ce19ddeb56be538ecdc2f754240744d65 WHIRLPOOL dc8dabcde50b51c0e6a359b530d7be2cd1c70fc24a463fb598712f8d0c05ede86b0f89ad508cd5f70c75d7e7fa6974fdf24b074a267492d785efe765b35676ef
+EBUILD xz-utils-5.1.3_alpha.ebuild 2239 SHA256 8d65773a8fa8ee3fdc00c739bda5c7235fbb060b8854481a9c762bbea84e9ae2 SHA512 9923a4a7891c5ee4e4b0bed6158681527b59a7ebfa730707972cf5f4ea8c31245633b66fc2526d49ed7b786bc133ce941ed39790071b5d7ee6651f2618197120 WHIRLPOOL 47d57eb15eeca1b534752623611057f30b59a01acecf38188d7ef53accae5c296dc7bd87694d5c32f331cdb37cee774082ddd3dd99a263d7d3f99f820b20edf4
 EBUILD xz-utils-9999.ebuild 2216 SHA256 e2aa6a0005d49914dc528ab2fbd17e3c5ccdebdc7e76c8a075d1c6fddc460841 SHA512 a566f3d4b325b490b833ed2f7105c7dff0d74aaf9a78ea3a0f9f55c58fda06cc6ef2e66a59d84ca5bf3455c9f75ef88aedbd35cb047b997b5255dadc7218887b WHIRLPOOL ddef270331324210c1f3d47059a5a44b337ae2b50587f06729c5ec0d21ff7863c592acb4a61dbabd3b37efdf62b517494f8dca002e4cb91650e0734483a18042
-MISC ChangeLog 8563 SHA256 7eab6a10479a177cec51f4bf53907fb21e677e6ab37e06cb0fb21b6e340bdc22 SHA512 4b959aa1a98f2f998833ba818d83d265693255e8dca61b02acfad69d38e711d2e2c0dd5ca28ae5f598d25b53dd07f46728424ace5710782eecded4dd0b3cfa26 WHIRLPOOL 7394a8679ce8d5662ee376eec0644e0d30866dce64e693acfac0cb65429019c24ca01c299530d15184f0efca158b9f20dbd1a0c0af944149fba654bce0630716
+MISC ChangeLog 8766 SHA256 bfedd4dc4fee94ad71365a97942d44a2e595fa5b4634328dd347ceb66959d086 SHA512 237e7377f278b753a6123a45b1dadfb8666c42315ced194755edaddd5f8a1fbc1805c39faa45b740f9a79e956fb9bc1d4dd1fcd36ff29342ce59e935f38302d0 WHIRLPOOL 29395dc817bcd7359239941d7b880bee2cc93acc7f2677025d4ed4b60956d2adb2ad46039c2a18940f83b0e14fdcafa48fc440008effce7248ff9c3914b3a08b
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSYe5HAAoJELEHsLL7fEFW0joP/RL3q9Ei4jad1l5gcxoTmmHm
-T+Pr9OAyve11L+PukZtoHtTv5tZBhsZgNOU7PPIruBlEshhbA8L/5/fSzbhLq7nl
-3tY58hvj2j9SxrlVlF2Zcv1ib0c3BRveoaCdpkLjBLrfHKaXvGEkuM1cFJOv2Ta0
-OB09ZNOlHtrAoO5MpxRwDxZh4j0tNcvYIRpIoUUBl8aPHQoJ6e4r5dWNU/fZ9TQs
-Rq/PSg3jWVfH/abxf7rRZkbzSRmluBCBqhtNIZsIlhoFA9pzR/W40wijKnosj1rN
-edlAkpsdTm8okDgXIUK5w/t56SsWM0ti1NG/kpkSaMMiKxARtcu+S1PNcqTCp9Lk
-6ONf2OBuhqGZYVDAfra8Kua0WqSWdvLty6YxsNF5Y8WeURCPf7Ij4ZBjMfwuJTaE
-uMR7HMrG6zDGmYrQygZW81685lXxCX7Qw12LCboJeZXBlifo94cF8UWF0U/FYwoP
-D3DZaWkXj4v+KC3zhnCM/DQOV8LjOzDdR/sGZGVvr1OKPUYzrqULtZCqoNRljfGn
-b9dGc+fdZHxJf5mKLgw8hpNHCn0EPm2wSFNHfV15GCr80EJDG2jD+OZAtX4gIwxn
-/JvFH8QEjZsK6k4nd0MKQaqcikgeujMQsTj/hMudPKIB2G3qU7L4Pg3RFyl5w2CT
-fIOWi3ZsL4YEHZUeQ7t2
-=rMfl
+iQIcBAEBCAAGBQJSbjqgAAoJEPiazRVxLXTFnqwQAK/x4QCrqE1jaB8B6TWiSRz9
+hjYXejzIG3WnebRVmDhoY8q/9dZjK/nvyjazFhCwUkOlNTSPxFSYK785GEjga2n4
+klgVJukCBEHgGJqGjF5tcK36NL/1kmWn2p1aMfzvRUf/RBTSfrj2QGycFT8Km3rR
+BsoFMOGyGM/8HRBLgVInUtyQhqZuJ/5eE1z4U/MILdnVYTBUcNgGXhvWIJrtONS6
+gdBOuTCWONw170IK/LCpjpXgySmlweoolhVd3JcCoAmfkJpQ6jrcGG5poZLXagdO
+jpcojjGq6eD+gwmuh8ZKwuwtZqZeIT7Pg7n4VhpuhCt7QPRwoWJ1xelPuWh6Gum6
+qwWZGfPUVhXPCx/si/DmUY4vKro/gv5UH5fv/EfJSuiQCjzLxaQ9HXN/MPYQ7t7X
+yZWZXwIVzdaaLR/SjkbJW3LbI6bKNsTIMZm6R0wHZx2A2wHkgZW6iq8wRgO+0wlq
+geWeLbdXrXOARN8ixMoJUOGF2wdOVAR/cU77TsxaEGag5vJDg4P8tmGqhIqAvuRO
+2YhdYIHpRl0tdWikxx6fzlaXv8qIiYtRRRmRBl6Pr4tW5muy5JvLxbSqhb7Ak2qh
+WJ0Yjq4S8wwJ+bNH8EfRr2o3iFGqoVfOUTO1NZfmGmLlEI5qSDW1ABPtIN1p97ou
+v+y5B4kimfYvgb/eVR+n
+=sSBb
 -----END PGP SIGNATURE-----
