@@ -1,6 +1,12 @@
 # ChangeLog for app-arch/xz-utils
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/xz-utils/ChangeLog,v 1.65 2013/10/19 02:28:16 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/xz-utils/ChangeLog,v 1.66 2013/10/28 10:21:19 polynomial-c Exp $
+
+*xz-utils-5.1.3_alpha (28 Oct 2013)
+
+  28 Oct 2013; Lars Wendler <polynomial-c@gentoo.org>
+  +xz-utils-5.1.3_alpha.ebuild:
+  Added alpha release as requested in bug #484068 by Christoph Junghans.
 
   19 Oct 2013; Mike Frysinger <vapier@gentoo.org> xz-utils-5.0.5-r1.ebuild,
   xz-utils-9999.ebuild:
